fixes up clients

--- a/go/makefile
+++ b/go/makefile
@@ -1,8 +1,11 @@
 build:
-	go build .
+	cd src; \
+	go build .;
 run:
-	go run .
+	cd src; \
+	go run .;
 install:
+	cd src; \
 	go get .
 dbDevProxy:
 	pscale connect nak-data staging
