--- a/src/backend/makefile
+++ b/src/backend/makefile
@@ -1,4 +1,5 @@
 build:
+	make buildLoginPage; \
 	cd src; \
 	go build .;
 run:
@@ -7,5 +8,11 @@ run:
 install:
 	cd src; \
 	go get .
+buildLoginPage:
+	rm -rf src/static; \
+	mkdir src/static; \
+	cd ../frontend; \
+	yarn build; \
+	cp -r dist/* ../backend/src/static;
 dbDevProxy:
 	pscale connect nak-data staging
