--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vite-template-solid",
+  "name": "nak-auth-login",
   "version": "0.0.0",
   "description": "",
   "scripts": {
@@ -18,7 +18,6 @@
     "@solidjs/router": "^0.8.2",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.21",
-    "rxjs": "^7.8.0",
     "solid-js": "^1.6.10",
     "tailwindcss": "^3.2.7"
   }
